# fastde-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: RcppExports.R  bioqc.R  cpp11.R  cpp11_foldchange.R  cpp11_sparsemat.R  cpp11_ttest.R  cpp11_wmwtest.R  dgCMatrix64.R  fast_findmarkers.R  fast_foldchange.R  fast_ttest.R  fast_wilcox.R  fastde_package.R  fileIO.R  read.R  read_h5.R  spamx.R  sparsemat.R  sparsemat_utils.R  zzz.R
benchmarks/: CMakeLists.txt
benchmarks/src/: CMakeLists.txt
include/fastde/: benchmark_utils.hpp  benchmark_utils.tpp  cluster_utils.hpp  cluster_utils.tpp  foldchange.hpp  foldchange.tpp  normalize.hpp  normalize.tpp  sparsemat.hpp  sparsemat.tpp  ttest.hpp  ttest.tpp  wmwtest.hpp  wmwtest.tpp
man/: bigde-package.Rd  foldchange.Rd  wmwtest.Rd
setup/: Makevars
src/: Makevars  RcppExports.cpp  common.hpp  cpp11.cpp  cpp11_foldchange.cpp  cpp11_sparsemat.cpp  cpp11_ttest.cpp  cpp11_wmwtest.cpp  dgCMatrix.hpp  dgCMatrix64.hpp  dgMatrix.hpp  fastde_types.hpp  instantiate_benchmark_utils.cpp  instantiate_cluster_utils.cpp  instantiate_foldchange.cpp  instantiate_ttest.cpp  instantiate_utils_data.cpp  instantiate_utils_sparsemat.cpp  instantiate_wmwtest.cpp  rcpp_benchmark_utils.cpp  rcpp_benchmark_utils.hpp  rcpp_benchmark_utils.tpp  rcpp_cluster_utils.cpp  rcpp_cluster_utils.hpp  rcpp_cluster_utils.tpp  rcpp_data_utils.cpp  rcpp_data_utils.hpp  rcpp_data_utils.tpp  rcpp_foldchange.cpp  rcpp_sparsemat.cpp  rcpp_sparsemat.cpp.slow  rcpp_ttest.cpp  rcpp_wmwtest.cpp  symbols.rds  utils_data.hpp  utils_data.tpp  utils_sparsemat.hpp  utils_sparsemat.tpp
src/utils/: CLIParserCommon.hpp  HDF5Reader.hpp  HDF5Writer.hpp  benchmark.hpp  hdf5_types.hpp  matrix_io.hpp  mpi_types.hpp  parameters_base.hpp  partition.hpp  report.hpp
test/: rcppomptest.R  test_MAST.R  test_dgCMatrix64.R  test_dgCMatrix64_1Monly.R  test_dgCMatrix64_3k.R  test_dgCMatrix_spam.R  test_foldchange.R  test_spamx.R  test_sparse_foldchange.R  test_sparse_ttest.R  test_sparse_wilcox.R  test_sparsemat.R  test_ttest.R  test_wilcox.R
test/demo/: run_seurat.R  seurat_pbmc_submit_markers_compbio.sh  seurat_pbmc_submit_markersonly_mt_compbio.sh  seurat_workflow.R
tests/: CMakeLists.txt
tests/scripts/: bind.py  foldchange.py  h5_io.py  normalize.py  sums.py  to_dense.py  transpose.py  ttest.py  wmwtest.py
tests/src/: CMakeLists.txt  gen_data_io.cpp  test_foldchange.cpp  test_io.cpp  test_normalize.cpp  test_sparsemat.cpp  test_sparsemat_bind.cpp  test_sparsemat_sums.cpp  test_sparsemat_todense.cpp  test_sparsemat_transpose.cpp  test_ttest.cpp  test_wmwtest.cpp
